# audio-sanity-checks

./: .gitignore  Makefile  README.md  desgin_proposal.md  literature_review.md  pyproject.toml
audio_sanity_checks/: __init__.py  config.py  dataset.py  features.py  plots.py  spectrograms.py
audio_sanity_checks/modeling/: models.py  predict.py  train.py
docs/: design_proposal.md  literature_review.md
notebooks/: spectrograms.ipynb  test.ipynb
scripts/: download_datasets.py
